# aseprite-websockets-mock

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_websockets.py
app/: main.py
tests/: send_message.py
